[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/EnemiesInheritance/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/FlyingEnemy3.gd" type="Script" id=2]
[ext_resource path="res://ReusableNodes/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://ReusableNodes/ObjectDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://ReusableNodes/WanderController.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 9.15557

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 96.0

[node name="FlyingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Stats" parent="." index="2"]
maxHealth = 5

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="PursuitTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[node name="PlayerDetection" parent="." index="6" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 4 )

[node name="WanderController" parent="." index="7" instance=ExtResource( 5 )]

[node name="ObjectDetector" parent="." index="8" instance=ExtResource( 4 )]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetection"]
